Fix date picker z-index

--- a/frontend/src/Editor/Components/Table/datepicker.scss
+++ b/frontend/src/Editor/Components/Table/datepicker.scss
@@ -6,6 +6,10 @@
     padding: 0px;
 }
 
+.react-datepicker-popper {
+   z-index: 3;
+}
+
 .tj-timepicker-widget {
     &.react-datepicker-popper {
         background-color: unset;
